changes to temlplate colors

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 navbar_brand: Fundamentals of Interactive Design
 menu:
   Home: index.html
+  Slides: slides/
   Syllabus: syllabus/
 rss: /atom.xml
 
@@ -11,9 +12,8 @@ fancybox: false
 
 # Sidebar
 widgets:
+- slide_list
 - useful_links
-- category
-- tag
 about_widget_content: >
   <p>This is the website for my Fundamentals of Interactive Design at Seminole State College in Heathrow Florida.</p>
 
